0.8 - in dev
- Improved clarity of build instructions in README
- Visurf and Gtk3 frontends now optional

0.7 - May 9 2023
- Added screen of NeoSurf to README.md
- Added LICENSE file
- Prevent building if source or build dirs have whitespace
- Added concise error messages when build-essential utilities are missing
- Added stub CONTRIBUTING.md file

0.6 - May 8 2023
- Incorporated upstream commits to NetSurf and its subprojects
- Improved LibreSSL support
- Fixed frequent or constant crashing on certain websites
- Send DNT (Do Not Track) request by default
- Updated Visurf for compatibility with latest NetSurf commits
- Further reductions of unused or obsolete code
- Fixed search engine being set to Dictionary.com instead of DuckDuckGo
- Removed redundant resources
- Changes 'q' binding for closing Visurf to ctrl+q
- Large number of other fixes and improvements

0.5 - May 7 2023
- Began bulk rebranding to NeoSurf
- Removed support for languages besides for English (these may be
re-introduced later)
- Reworked welcome.html, license.html, and credits.html
- Removed some obsolete documentation
- Removed libnslog
- Merged libwapcaplet into libnsutils
- Enabled JavaScript by default
- Further miscellaneous code reductions
- Replaced libnspsl in favor of a system-installed libpsl

0.4 - May 3 2023
- Switched default browser to DuckDuckGo
- duktape bindings are now generated automatically
- Added a proper install rule
- Added CMake option for installing nsgenbind
- Added CMake option for building and installing an xxd implementation
- Removed librsvg support in favor of libsvgtiny
- Removed support for RiscOS sprites (image/x-riscos-sprite)
- Further reductions to unnecessary source code
- libsvgtiny colors are now generated automatically with gperf
- libcss element properties and selectors are now generated automatically at configure time
- Fixed flex and bison support for nsgenbind
- Added CMake option for installing genparser from libcss

0.3 - Apr 19 2023