@@ -1,1 +1,1 @@
-../../../resources/adblock.css
+../neosurf/adblock.css
