@@ -1,1 +1,1 @@
-../../../resources/credits.html
+../neosurf/credits.html
