@@ -1,1 +1,1 @@
-../../../resources/default.css
+../neosurf/default.css
