@@ -1,1 +1,1 @@
-../../../resources/internal.css
+../neosurf/internal.css
